--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -10,6 +10,7 @@ jobs:
       - env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Can use the default token for most functions
         run: |
+          pip install -r requirements.txt
           python train.py --output plot.png
 
           echo 'My first CML report' > report.md
